--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
     button {
         margin-top: 2em;
         padding:2em;
+        -webkit-appearance:none;
+        background-color:white;
     }
     .signature {
         margin-top:2em;
