--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
         text-align: right;
     }
 
+    a{
+      color: white;
+     text-decoration: none;
+    }
+
 </style>
 
 
@@ -63,7 +68,7 @@
       <p> Olle was a great mentor. He showed me so many frameworks, libraries and techniques. //I have them all written down and will start studying on my own ASAP// But he also always managed to keep it fun and interesting for me.</p>
       <p class="signature"> George Kolev
         <br>Praktikant
-        <br>+359 88 4361277
+        <br><a href="#">+359 88 4361277</a>
         </p>
      
       <div class="imnevergonnalearnhowflexboxworkswtfiswrongwithme"><button id="spagettiCode"> Enjoy.mp3 </button>
