--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     a{
       color: white;
-     text-decoration: none;
+      text-decoration: none;
     }
 
 </style>
@@ -67,7 +67,7 @@
       <p> I have really enjoyed my time at ny and hope that our paths meet once more in the future. I was definitely outside of my comfort zone most of the time. My biggest regret is not learning swedish in advance, but considering the overall situation I think I managed fine. Keep up the good work everyone and thank you for inviting me into your family once again.  </p>
       <p> Olle was a great mentor. He showed me so many frameworks, libraries and techniques. //I have them all written down and will start studying on my own ASAP// But he also always managed to keep it fun and interesting for me.</p>
       <p class="signature"> George Kolev
-        <br>Praktikant
+        <br>Former Intern
         <br><a href="#">+359 88 4361277</a>
         </p>
      
