--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link href="https://fonts.googleapis.com/css?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
-    <title>Thank you!</title>
+    <title>Ora Et Labora</title>
 <style>
 * { 
  font-family: 'Press Start 2P', cursive,
