--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
 
 
       <h1>Thank you!</h1>
-      <p> I have really enjoyed my time at ny and hope that our paths meet once more in the future. I was definitely outside of my comfort zone most of the time. My biggest regret is not learning swedish in advance, but considering the overall situation I think I managed fine. Keep up the good work everyone and thank you for inviting me into your family once again.  </p>
+      <p> I have really enjoyed my time at ny and hope that our paths meet once more in the future. I was definitely outside of my comfort zone most of the time. My biggest regret is not learning swedish in advance, but considering the overall situation I think I managed moderately fine. Keep up the good work everyone and thank you for inviting me into your family once again.  </p>
+      <p> Thank you Pernilla for believing in me and giving me this opportunity to grow and learn </p>
       <p> Olle was a great mentor. He showed me so many frameworks, libraries and techniques. //I have them all written down and will start studying on my own ASAP// But he also always managed to keep it fun and interesting for me.</p>
       <p class="signature"> George Kolev
         <br>Former Intern
